--- a/index.html
+++ b/index.html
@@ -350,9 +350,9 @@
             width: 100%;
             border-radius: 16px 16px 0 0;
             padding: 0;
-            max-height: 85vh;
-            overflow-y: auto;
-            -webkit-overflow-scrolling: touch;
+            max-height: 90vh;
+            display: flex;
+            flex-direction: column;
             transform: translateY(100%);
             transition: transform 0.3s ease;
             box-shadow: 0 -2px 16px rgba(0,0,0,0.15);
@@ -369,8 +369,7 @@
             justify-content: space-between;
             align-items: center;
             background: white;
-            position: sticky;
-            top: 0;
+            flex-shrink: 0;
             z-index: 10;
         }
 
@@ -400,6 +399,9 @@
 
         .modal-body {
             padding: 16px;
+            flex: 1;
+            overflow-y: auto;
+            -webkit-overflow-scrolling: touch;
         }
 
         .modal-footer {
@@ -408,8 +410,8 @@
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 8px;
-            sticky: bottom;
             background: white;
+            flex-shrink: 0;
             z-index: 10;
         }
 
